@@ -8,9 +8,7 @@ import java.util.Collection;
 import dtool.ast.definitions.DefUnit;
 import dtool.ast.expressions.Resolvable.ITemplateRefNode;
 import dtool.resolver.CommonDefUnitSearch;
-import dtool.resolver.PrefixDefUnitSearch;
 import dtool.resolver.api.IModuleResolver;
-import dtool.resolver.api.PrefixDefUnitSearchBase.ECompletionResultStatus;
 
 
 /**
@@ -52,17 +50,6 @@ public abstract class CommonRefQualified extends NamedReference implements ITemp
 				return;
 			defUnit.resolveSearchInMembersScope(search);
 		}
-	}
-	
-	@Override
-	public void performPrefixSearch(PrefixDefUnitSearch prefixSearch, String fullSource) {
-		if(prefixSearch.getOffset() <= getDotOffset()) {
-			prefixSearch.assignResult(ECompletionResultStatus.INVALID_REFQUAL_LOCATION, 
-					"Invalid Location: before qualifier dot but not next to id.");
-			return;
-		}
-		
-		doSearch(prefixSearch);
 	}
 	
 	public int getDotOffset() {
