@@ -73,7 +73,7 @@ import pack.subpack_NONEXISTANT.#FINDMISSING#REFSEARCH¤【】;
 module importTest; #PROJECT(importsProject)
 
 import#@SPACE_Opt#FINDMISSING#REFSEARCH¤【#@IMPORTSPROJ_ALL_MODULES】#@SPACE_Opt2;
-import #REFSEARCH¤【#@IMPORTSPROJ_ALL_MODULES>>5】pack.#@SPACE_Opt#FINDMISSING#REFSEARCH¤【#@IMPORTSPROJ_PACK_MODULES>>0】#@SPACE_Opt2;
-import #REFSEARCH¤【#@IMPORTSPROJ_ALL_MODULES>>6】pack .#@SPACE_Opt2#FINDMISSING#REFSEARCH¤【#@IMPORTSPROJ_PACK_MODULES>>0】;
-import #REFSEARCH¤【#@IMPORTSPROJ_ALL_MODULES>>13】pack.subpack.#@SPACE_Opt#FINDMISSING#REFSEARCH¤【pack.subpack.mod3/▪pack.subpack.mod4/】#@SPACE_Opt2;
+import #REFSEARCH¤【#@IMPORTSPROJ_ALL_MODULES►5】pack.#@SPACE_Opt#FINDMISSING#REFSEARCH¤【#@IMPORTSPROJ_PACK_MODULES►0】#@SPACE_Opt2;
+import #REFSEARCH¤【#@IMPORTSPROJ_ALL_MODULES►6】pack .#@SPACE_Opt2#FINDMISSING#REFSEARCH¤【#@IMPORTSPROJ_PACK_MODULES►0】;
+import #REFSEARCH¤【#@IMPORTSPROJ_ALL_MODULES►13】pack.subpack.#@SPACE_Opt#FINDMISSING#REFSEARCH¤【pack.subpack.mod3/▪pack.subpack.mod4/】#@SPACE_Opt2;
 ▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂
